--- a/Weatherity/ViewControllers/DailyWeatherViewController/View/DailyWeatherTableViewCell/WeatherTableViewCell.xib
+++ b/Weatherity/ViewControllers/DailyWeatherViewController/View/DailyWeatherTableViewCell/WeatherTableViewCell.xib
@@ -21,11 +21,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="241" id="KGk-i7-Jjw" customClass="WeatherTableViewCell" customModule="Weatherity" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="157"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="271" id="KGk-i7-Jjw" customClass="WeatherTableViewCell" customModule="Weatherity" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="187"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="157"/>
+                <rect key="frame" x="0.0" y="0.0" width="294.5" height="187"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="50n" translatesAutoresizingMaskIntoConstraints="NO" id="Ics-cQ-YUs">
@@ -35,11 +35,11 @@
                             <constraint firstAttribute="width" constant="44" id="YYd-aB-WEf"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="G1e-Se-C3I">
-                        <rect key="frame" x="76" y="16" width="188" height="102"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="G1e-Se-C3I">
+                        <rect key="frame" x="76" y="16" width="202.5" height="102"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Psu-DE-A80">
-                                <rect key="frame" x="0.0" y="0.0" width="188" height="20"/>
+                                <rect key="frame" x="0.0" y="0.0" width="202.5" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="xRT-2Y-4Kj"/>
                                 </constraints>
@@ -47,17 +47,20 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Temp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NHA-We-24a">
-                                <rect key="frame" x="0.0" y="28" width="188" height="22"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NHA-We-24a">
+                                <rect key="frame" x="0.0" y="28" width="202.5" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="zYh-rX-jNG"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="NunitoSans-Bold" family="Nunito Sans" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="VXR-pn-I2D">
-                                <rect key="frame" x="0.0" y="58" width="188" height="44"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="VXR-pn-I2D">
+                                <rect key="frame" x="0.0" y="58" width="202.5" height="44"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P26-S7-SgQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="188" height="20"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="202.5" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="H1h-EZ-dju"/>
                                         </constraints>
@@ -66,7 +69,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bzo-Pa-x4o">
-                                        <rect key="frame" x="0.0" y="24" width="188" height="20"/>
+                                        <rect key="frame" x="0.0" y="24" width="202.5" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="TKU-H3-B31"/>
                                         </constraints>
@@ -78,20 +81,11 @@
                             </stackView>
                         </subviews>
                     </stackView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.right.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="6LK-e0-TUD">
-                        <rect key="frame" x="280" y="66.5" width="24" height="23.5"/>
-                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="6LK-e0-TUD" secondAttribute="height" multiplier="1:1" id="2u3-Fx-jnT"/>
-                            <constraint firstAttribute="width" constant="24" id="Gli-g4-3hS"/>
-                        </constraints>
-                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="medium"/>
-                    </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Ulv-zp-JDZ">
-                        <rect key="frame" x="16" y="137" width="248" height="7"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Ulv-zp-JDZ">
+                        <rect key="frame" x="16" y="134" width="262.5" height="37"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W7s-ge-I0w">
-                                <rect key="frame" x="0.0" y="0.0" width="248" height="7"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W7s-ge-I0w">
+                                <rect key="frame" x="0.0" y="0.0" width="262.5" height="37"/>
                                 <fontDescription key="fontDescription" name="NunitoSans-Regular" family="Nunito Sans" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -100,17 +94,15 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="6LK-e0-TUD" secondAttribute="trailing" constant="16" id="3or-wR-W3y"/>
+                    <constraint firstItem="Ulv-zp-JDZ" firstAttribute="trailing" secondItem="VXR-pn-I2D" secondAttribute="trailing" id="0n6-lh-kIO"/>
                     <constraint firstAttribute="bottom" secondItem="Ulv-zp-JDZ" secondAttribute="bottom" constant="16" id="Afj-Iv-gfE"/>
-                    <constraint firstItem="6LK-e0-TUD" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Ji0-1R-jDg"/>
                     <constraint firstItem="G1e-Se-C3I" firstAttribute="leading" secondItem="Ics-cQ-YUs" secondAttribute="trailing" constant="16" id="Ntn-Tv-iFF"/>
                     <constraint firstItem="Ulv-zp-JDZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Sxk-MP-1NP"/>
-                    <constraint firstItem="6LK-e0-TUD" firstAttribute="leading" secondItem="G1e-Se-C3I" secondAttribute="trailing" constant="16" id="Y5E-qI-zEO"/>
+                    <constraint firstAttribute="trailing" secondItem="G1e-Se-C3I" secondAttribute="trailing" constant="16" id="c9N-Rn-770"/>
                     <constraint firstItem="G1e-Se-C3I" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="eRd-ra-9v5"/>
                     <constraint firstItem="Ics-cQ-YUs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="eW2-fs-B0c"/>
                     <constraint firstItem="Ulv-zp-JDZ" firstAttribute="top" secondItem="G1e-Se-C3I" secondAttribute="bottom" constant="16" id="kt8-5h-vaL"/>
                     <constraint firstItem="Ics-cQ-YUs" firstAttribute="width" secondItem="Ics-cQ-YUs" secondAttribute="height" multiplier="1:1" id="moD-yy-VXw"/>
-                    <constraint firstItem="6LK-e0-TUD" firstAttribute="leading" secondItem="Ulv-zp-JDZ" secondAttribute="trailing" constant="16" id="n7P-bT-pof"/>
                     <constraint firstItem="Ics-cQ-YUs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="vne-Yx-iqP"/>
                 </constraints>
             </tableViewCellContentView>
@@ -123,11 +115,10 @@
                 <outlet property="lblTempNight" destination="bzo-Pa-x4o" id="EoH-0J-ECs"/>
                 <outlet property="lblTemperature" destination="NHA-We-24a" id="lmo-hb-0HQ"/>
             </connections>
-            <point key="canvasLocation" x="134.78260869565219" y="94.754464285714278"/>
+            <point key="canvasLocation" x="134.78260869565219" y="104.79910714285714"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="50n" width="50" height="50"/>
-        <image name="arrow.right.circle" catalog="system" width="128" height="121"/>
     </resources>
 </document>
