--- a/Weatherity/Storyboards/Base.lproj/Main.storyboard
+++ b/Weatherity/Storyboards/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Odq-F1-Rpj">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Odq-F1-Rpj">
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
@@ -122,20 +122,20 @@
                             <tableViewSection id="HES-B0-PZN">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" id="oeb-E5-ESw">
-                                        <rect key="frame" x="20" y="110" width="374" height="77.5"/>
+                                        <rect key="frame" x="20" y="110" width="374" height="93.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oeb-E5-ESw" id="JRq-oc-EqX">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="77.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="93.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature Units" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ekc-Y1-VKe">
-                                                    <rect key="frame" x="16" y="8" width="342" height="22"/>
+                                                    <rect key="frame" x="16" y="16" width="342" height="22"/>
                                                     <fontDescription key="fontDescription" name="NunitoSans-Regular" family="Nunito Sans" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="0mv-27-qca">
-                                                    <rect key="frame" x="16" y="38" width="342" height="32.5"/>
+                                                    <rect key="frame" x="16" y="46" width="342" height="32.5"/>
                                                     <segments>
                                                         <segment title="Celsius"/>
                                                         <segment title="Fahrenheit"/>
@@ -151,8 +151,8 @@
                                                 <constraint firstItem="0mv-27-qca" firstAttribute="leading" secondItem="JRq-oc-EqX" secondAttribute="leading" constant="16" id="XvX-U8-f3x"/>
                                                 <constraint firstAttribute="trailing" secondItem="0mv-27-qca" secondAttribute="trailing" constant="16" id="gQ1-35-Vgf"/>
                                                 <constraint firstItem="0mv-27-qca" firstAttribute="top" secondItem="ekc-Y1-VKe" secondAttribute="bottom" constant="8" id="jeV-08-fhQ"/>
-                                                <constraint firstAttribute="bottom" secondItem="0mv-27-qca" secondAttribute="bottom" constant="8" id="n3c-Uh-n6d"/>
-                                                <constraint firstItem="ekc-Y1-VKe" firstAttribute="top" secondItem="JRq-oc-EqX" secondAttribute="top" constant="8" id="pHj-mQ-Ybk"/>
+                                                <constraint firstAttribute="bottom" secondItem="0mv-27-qca" secondAttribute="bottom" constant="16" id="n3c-Uh-n6d"/>
+                                                <constraint firstItem="ekc-Y1-VKe" firstAttribute="top" secondItem="JRq-oc-EqX" secondAttribute="top" constant="16" id="pHj-mQ-Ybk"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
